adjusted all the controller and some serviceImpl